# tsn-affinity

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
configs/: README.md  __init__.py  base.py  development.py  production.py
docs/: README.md  api.md  architecture.md  changelog.md  contributing.md  deployment.md  faq.md  getting-started.md  index.md
runs/atari_final_tsn_affinity/: results.json
runs/atari_real_tsn_affinity/: results.json
runs/atari_real_tsn_core/: results.json
runs/benchmark_2026_04_30/: benchmark_results.json  tsn_affinity_runs.json  tsn_core_runs.json
scripts/: cleanup.sh  setup.sh
src/tsn_affinity/: __init__.py
src/tsn_affinity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tsn_affinity/benchmarks/: __init__.py  metrics.py  task_registry.py  task_spec.py
src/tsn_affinity/core/: __init__.py  attention.py  config.py  decision_transformer.py  obs_encoder.py
src/tsn_affinity/data/: __init__.py  batch_generator.py  panda_data.py  trajectory.py
src/tsn_affinity/routing/: __init__.py  affinity_metrics.py  (+2 more)
tests/: README.md  conftest.py  test_affinity_routing.py  test_core.py  test_data.py  test_metrics.py  test_routing.py  test_sparse.py  test_strategies.py
tests/benchmarks/: test_adapters.py  test_metrics.py  test_registry.py
tests/core/: test_attention.py  test_config.py  test_decision_transformer.py  test_encoder.py
tests/data/: test_batch_loader.py  test_panda_loader.py  test_trajectory.py
tests/routing/: test_metrics.py  test_warmstarter.py
tests/run/: test_analysis.py
tests/services/: test_training_service.py
tests/sparse/: test_conv2d.py  test_converter.py  test_embedding.py  test_linear.py  test_topk.py
tests/strategies/: test_base.py  test_copy_manager.py  test_cumulative_replay.py  test_naive.py  test_tsn_affinity.py  test_tsn_core.py  test_tsn_replay_kl.py
tsn_affinity/: README.md  __init__.py
tsn_affinity/cli/: __init__.py  __main__.py  atari.py  benchmark.py  panda.py
tsn_affinity/core/: README.md  __init__.py  attention.py  config.py  decision_transformer.py  encoder.py  exceptions.py  logging_config.py
tsn_affinity/data/: README.md  __init__.py  batch.py  panda.py  trajectory.py
tsn_affinity/interfaces/: README.md  __init__.py  benchmark.py  data_loader.py  strategy.py
tsn_affinity/routing/: README.md  __init__.py  metrics.py  warmstarter.py
tsn_affinity/run/: README.md  __init__.py  analysis.py
tsn_affinity/services/: README.md  __init__.py  training_service.py
tsn_affinity/sparse/: README.md  __init__.py  base.py  conv2d.py  converter.py  embedding.py  linear.py  topk.py
tsn_affinity/strategies/: README.md  __init__.py  base.py  copy_manager.py  cumulative_replay.py  model_copy.py  naive.py  training_utils.py  tsn_affinity.py  tsn_base.py  tsn_core.py  tsn_replay_kl.py
(+36 files in other folders)
